# CompGraphEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
common/gl_renderer/: CMakeLists.txt
common/gl_renderer/include/gl/: buffer.h  command.h  debug.h  draw_command.h  engine.h  framebuffer.h  material.h  mesh.h  model.h  pipeline.h  scene.h  shape_primitive.h  texture.h  utils.h
common/gl_renderer/src/gl/: buffer.cpp  command.cpp  debug.cpp  draw_command.cpp  engine.cpp  framebuffer.cpp  material.cpp  mesh.cpp  model.cpp  pipeline.cpp  py_interface.cpp  scene.cpp  shape_primitive.cpp  texture.cpp
common/phys_filesystem/: CMakeLists.txt
common/phys_filesystem/include/: phys_filesystem.h
common/phys_filesystem/src/: phys_filesystem.cpp
common/py_interface/: CMakeLists.txt
common/py_interface/include/: py_interface.h
common/py_interface/src/: py_interface.cpp
common/vk_renderer/: CMakeLists.txt
common/vk_renderer/include/vk/: acceleration_struct.h  buffer.h  command.h  common.h  draw_command.h  engine.h  framebuffer.h  imgui_manager.h  mesh.h  pipeline.h  scene.h  texture.h  utils.h  window.h
common/vk_renderer/src/vk/: acceleration_struct.cpp  buffer.cpp  command.cpp  common.cpp  draw_command.cpp  engine.cpp  framebuffer.cpp  imgui_manager.cpp  mesh.cpp  pipeline.cpp  scene.cpp  texture.cpp  utils.cpp  vma_implementation.cpp  window.cpp
core/: CMakeLists.txt
core/include/engine/: engine.h  filesystem.h  py_interface.h  resource.h  scene.h  script.h  system.h
core/include/maths/: angle.h
core/include/renderer/: buffer.h  camera.h  command.h  draw_command.h  framebuffer.h  light.h  material.h  mesh.h  model.h  pipeline.h  texture.h
core/include/utils/: job_system.h  locator.h  log.h
core/proto/: config.proto  editor.proto  renderer.proto  vector.proto
core/src/engine/: engine.cpp  filesystem.cpp  py_interface.cpp  resource.cpp  scene.cpp  script.cpp
core/src/renderer/: camera.cpp  command.cpp  draw_command.cpp  light.cpp  mesh.cpp  model.cpp  pipeline.cpp  texture.cpp
core/src/utils/: job_system.cpp  log.cpp
main/editor/: CMakeLists.txt
main/editor/include/: command_editor.h  editor.h  editor_filesystem.h  editor_resource.h  editor_system.h  framebuffer_editor.h  inspector.h  material_editor.h  mesh_editor.h  model_editor.h  pbr_utils.h  pipeline_editor.h  render_pass_editor.h  resource.h  resource_manager.h  scene_editor.h  scene_preview.h  script_editor.h  shader_editor.h  texture_editor.h  texture_viewer.h
main/editor/include/editor/: buffer_editor.h  command_editor.h  editor.h  editor_filesystem.h  editor_system.h  framebuffer_editor.h  material_editor.h  mesh_editor.h  model_editor.h  pbr_utils.h  pipeline_editor.h  render_pass_editor.h  resource.h  resource_manager.h  scene_editor.h  script_editor.h  shader_editor.h  texture_editor.h
main/editor/include/gl_player/: player.h  player_filesystem.h
main/editor/include/vk_player/: player.h
main/editor/main/: editor_main.cpp  gl_player_main.cpp  pbr_utils_main.cpp  vk_player_main.cpp  vk_shader_analyze.cpp
main/editor/proto/: editor.proto
main/editor/scripts/: generate_scene.py  gpr5300.py  neko2.py  obj_parser.py  script_parser.py  shader_parser.py  texture_ktx_exporter.py
main/editor/shaders/: equirectangle.frag  pre_compute_brdf.comp  prefilter.frag
main/editor/src/: command_editor.cpp  editor.cpp  editor_filesystem.cpp  editor_resource.cpp  editor_system.cpp  framebuffer_editor.cpp  inspector.cpp  main.cpp  material_editor.cpp  mesh_editor.cpp  model_editor.cpp  pbr_utils.cpp  pipeline_editor.cpp  render_pass_editor.cpp  resource_manager.cpp  scene_editor.cpp  scene_preview.cpp  script_editor.cpp  shader_editor.cpp  texture_editor.cpp  texture_viewer.cpp
main/editor/src/editor/: buffer_editor.cpp  command_editor.cpp  editor.cpp  editor_filesystem.cpp  editor_system.cpp  framebuffer_editor.cpp  imnodes.cpp  material_editor.cpp  mesh_editor.cpp  model_editor.cpp  pbr_utils.cpp  pipeline_editor.cpp  render_pass_editor.cpp  resource_manager.cpp  scene_editor.cpp  scene_preview.cpp  script_editor.cpp  shader_editor.cpp  texture_editor.cpp
main/editor/src/gl_player/: player.cpp
main/editor/src/vk_player/: player.cpp
main/gl_player/: CMakeLists.txt
main/gl_player/include/: player.h  player_filesystem.h
main/gl_player/scripts/: camera.py  cube.py  gpr5300.py  post.py  skybox.py
main/gl_player/src/: main.cpp  player.cpp  player_filesystem.cpp
main/gl_samples/: CMakeLists.txt
main/gl_samples/data/scripts/: camera.py  core.py  neko2.py  scene03.py  scene06.py  scene07.py  scene08.py  scene09.py  scene10.py  scene11.py
main/gl_samples/data/shaders/scene02/: quad.vert
main/gl_samples/data/shaders/scene04/: texture.frag
main/gl_samples/data/shaders/scene06/: rotated_cube.vert  (+2 more)
main/gl_samples/include/: sample_program.h
main/gl_samples/src/: main.cpp  sample_program.cpp
main/hello_triangle/: CMakeLists.txt
main/hello_triangle/data/scripts/: scene03.py
main/hello_triangle/data/shaders/: triangle.frag  triangle.vert
main/hello_triangle/include/: triangle_program.h
main/hello_triangle/src/: main.cpp  triangle_program.cpp
main/player/: CMakeLists.txt
main/player/include/: player.h
main/player/scripts/: camera.py  cube.py  gpr5300.py  model.py  post.py
main/player/src/: main.cpp  player.cpp
main/utils/: CMakeLists.txt
main/utils/cubemap_generator/: cubemap_generator.cpp
main/utils/model_util/: model_util.cpp
main/utils/noise_generator/: noise_generator.cpp
main/utils/vk_shader_analyze/: vk_shader_analyze.cpp
main/vk_hello_triangle/: CMakeLists.txt
main/vk_hello_triangle/include/: triangle_program.h
main/vk_hello_triangle/src/: main.cpp  triangle_program.cpp
main/vk_samples/: CMakeLists.txt
main/vk_samples/data/scripts/: 03_uniform.py  05_ubo.py  06_subpasses.py  07_model.py  08_uniform_instancing.py  camera.py  core.py  neko2.py  rt_01.py
main/vk_samples/include/: raytracing_scene.h  sample_program.h
main/vk_samples/src/: main.cpp  raytracing_scene.cpp  sample_program.cpp  triangle_program.cpp
(+67 files in other folders)
